[project]
name = "lora"
version = "0.1.0"
description = "Fine-tuning with Low-rank Adaptation (LoRA)"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.4.0",
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.37",
    "langchain-openai>=0.3.6",
    "peft>=0.14.0",
    "python-dotenv>=1.0.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
]
